[build-system]
requires = ["flit_core >=3,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "ofjustpy"
readme = "README.md"
license = { file="LICENSE" }
maintainers = [
 { name="Kabira K", email= "kabira@monallabs.in"}
]
requires-python = ">=3.11"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version", "description"]



dependencies = ["addict==2.4.0",
"addict-tracking-changes==1.0.6; python_version >= '3.11'",
"addict-tracking-changes-fixed-attributes==0.0.1; python_version >= '3.11'",
"aenum==3.1.15",
"bs4==0.0.1",
"cachetools==5.3.1; python_version >= '3.7'",
"email-validator==2.0.0.post2; python_version >= '3.7'",
"function-pipes==0.1.2; python_version >= '3.8' and python_version < '4.0'",
"ofjustpy-engine==1.1.3; python_version >= '3.11'",
"rpyc==5.3.1; python_version >= '3.7'",
"selenium==4.11.2; python_version >= '3.7'",
"wtforms==3.0.1; python_version >= '3.7'"
]

[project.urls]
Home = "https://webworks.monallabs.in/ofjustpy/ofjustpy"
Documentation = "https://monallabs-org.github.io/ofjustpy/ofjustpy"
Source = "https://github.com/ofjustpy/ofjustpy"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]

